--- a/src/package.json
+++ b/src/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "7.55.0",
     "react-resizable-panels": "2.1.7",
+    "react-router-dom": "^7.11.0",
     "recharts": "2.15.2",
     "sass": "latest",
     "sass-embedded": "latest",
@@ -66,6 +67,7 @@
     "yaml": "latest"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "latest",
     "@types/node": "^22",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
@@ -73,7 +75,6 @@
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5",
     "tailwindcss": "4.1.17",
-    "@tailwindcss/postcss": "latest",
     "typescript": "^5",
     "vite": "6.3.5"
   }
