--- a/src/package.json
+++ b/src/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-toggle": "1.1.2",
     "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-tooltip": "latest",
+    "@supabase/supabase-js": "^2.89.0",
     "@vercel/analytics": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
