--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "terser": "latest",
     "tsx": "latest",
     "tw-animate-css": "1.4.0",
+    "uuid": "^13.0.0",
     "vaul": "1.1.2",
     "yaml": "latest"
   },
@@ -72,6 +73,7 @@
     "@types/node": "^22",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5",
