--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+	"scripts": {
+		"deploy:email": "powershell -ExecutionPolicy Bypass -File ./scripts/deploy-email-function.ps1",
+		"test:email": "powershell -ExecutionPolicy Bypass -File ./scripts/test-email-function.ps1"
+	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.89.0"
 	}
