--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,8 @@
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
     "jiti": "latest",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "less": "latest",
     "lightningcss": "latest",
     "lucide-react": "^0.454.0",
@@ -66,6 +68,7 @@
     "tw-animate-css": "1.4.0",
     "uuid": "^13.0.0",
     "vaul": "1.1.2",
+    "xlsx": "^0.18.5",
     "yaml": "latest"
   },
   "devDependencies": {
