--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "build": "vite build",
-    "dev": "vite"
+    "dev": "vite",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "1.2.3",
@@ -73,15 +76,20 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "latest",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^22",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "^10.4.22",
+    "jsdom": "^27.4.0",
     "postcss": "^8.5",
     "tailwindcss": "4.1.17",
     "typescript": "^5",
-    "vite": "6.3.5"
+    "vite": "6.3.5",
+    "vitest": "^4.0.16"
   }
 }
