--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,6 +85,7 @@
     "@types/uuid": "^11.0.0",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "4.0.16",
     "autoprefixer": "^10.4.22",
     "jsdom": "^27.4.0",
     "postcss": "^8.5",
